tests/sksl/errors/OpenArray.glsl
### Compilation failed:

error: 1: shader 'main' must be main() or main(float2)
error: 2: unknown identifier 'color'
error: 2: expected expression, but found '='
error: 2: unknown identifier 'color'
4 errors
